--- a/css/style_regestration.css
+++ b/css/style_regestration.css
@@ -9,7 +9,7 @@
 body {
     font-family: "Montserrat",
     sans-serif;
-    background:linear-gradient(rgba(0 , 0, 0, 0.5),rgba(0 , 0, 0, 0.5)), url(/img/Aussicht\ Meer\ -\ Mann.jpeg);
+    background:linear-gradient(rgba(0 , 0, 0, 0.5),rgba(0 , 0, 0, 0.5)), url(../img/Aussicht\ Meer\ -\ Mann.jpeg);
     background-size: cover;
     background-position: center;
 }
