--- a/css/start.css
+++ b/css/start.css
@@ -1,13 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+
 body {
-    /*background-image: url(../img/Aussicht\ Meer\ -\ Mann.jpeg);*/
-    background-color: blue;
+    font-family: "Montserrat",
+    sans-serif;
+    background:linear-gradient(rgba(0 , 0, 0, 0.5),rgba(0 , 0, 0, 0.5)), url(../img/Aussicht\ Meer\ -\ Mann.jpeg);
     background-size: cover;
     background-position: center;
-}
+    background-attachment: fixed;
 
+}
 /* The sidepanel menu */
 .sidepanel {
-    height: 250px; 
+    height: 290px; 
     width: 0; 
     position: fixed; 
     z-index: 1; 
@@ -15,7 +19,7 @@ body {
     left: 0;
     background-color: #111; 
     overflow-x: hidden; 
-    padding-top: 60px; 
+    padding-top: 50px; 
     transition: 0.5s; 
   }
 
@@ -28,12 +32,25 @@ body {
     transition: 0.3s;
   }
   
+  .dropdown-btn {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    border: none;
+    background: none;
+    width:100%;
+    text-align: left;
+    cursor: pointer;
+    outline: none;
+  }
   .sidepanel a:hover, .dropdown-btn:hover {
-    color: #f1f1f1;
+    color: white;
   }
 
   .active {
-    background-color: green;
+    background-color: #0367fd;
     color: white;
   }
 
@@ -57,7 +74,7 @@ body {
   }
   
   .openbtn {
-    font-size: 20px;
+    font-size: 30px;
     cursor: pointer;
     background-color: transparent;
     color: white;
@@ -65,6 +82,27 @@ body {
     border: none;
   }
 
+  /*Willkommen*/
+  #willkommen-container{
+    text-align:center;
+    display: -webkit-flex;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-align-items: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    color: white;
+    font-size: xx-large;
+}
+ 
+.willkommen{
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+}
 
-
-  
