--- a/css/style_login.css
+++ b/css/style_login.css
@@ -137,3 +137,79 @@ body {
     border: 3px solid #ffc400ef;
     background-color: #ffc400ef;
 }
+
+
+
+/* The sidepanel menu */
+.sidepanel {
+    height: 3200px; 
+    width: 0; 
+    position: fixed; 
+    z-index: 1; 
+    top: 0;
+    left: 0;
+    background-color: #111; 
+    overflow-x: hidden; 
+    padding-top: 50px; 
+    transition: 0.5s; 
+    box-shadow: 2px 2px 10px #0367fd;
+  }
+
+  .sidepanel a, .dropdown-btn {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+  }
+  
+  .dropdown-btn {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    border: none;
+    background: none;
+    width:100%;
+    text-align: left;
+    cursor: pointer;
+    outline: none;
+  }
+  .sidepanel a:hover, .dropdown-btn:hover {
+    color: white;
+  }
+
+  .active {
+    background-color: #0367fd;
+    color: white;
+  }
+
+  .sidepanel .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+  }
+  
+  .dropdown-container {
+    display: none;
+    background-color: #111;
+    padding-left: 8px;
+  }
+
+  .fa-caret-down {
+    float: right;
+    padding-right: 8px;
+  }
+  
+  .openbtn {
+    font-size: 30px;
+    cursor: pointer;
+    background-color: transparent;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+  }
