--- a/css/start.css
+++ b/css/start.css
@@ -11,76 +11,83 @@ body {
 }
 /* The sidepanel menu */
 .sidepanel {
-    height: 290px; 
-    width: 0; 
-    position: fixed; 
-    z-index: 1; 
-    top: 0;
-    left: 0;
-    background-color: #111; 
-    overflow-x: hidden; 
-    padding-top: 50px; 
-    transition: 0.5s; 
-  }
+  height: 350px; 
+  width: 0; 
+  position: fixed; 
+  z-index: 1; 
+  top: 0;
+  left: 0;
+  background-color: #111; 
+  overflow-x: hidden; 
+  padding-top: 50px; 
+  transition: 0.5s;
+  box-shadow: 3px 3px 14px#0367fd;
+  border-bottom-right-radius: 24px;
+}
 
-  .sidepanel a, .dropdown-btn {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    transition: 0.3s;
-  }
-  
-  .dropdown-btn {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    border: none;
-    background: none;
-    width:100%;
-    text-align: left;
-    cursor: pointer;
-    outline: none;
-  }
-  .sidepanel a:hover, .dropdown-btn:hover {
-    color: white;
-  }
+.sidepanel a, .dropdown-btn {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
 
-  .active {
-    background-color: #0367fd;
-    color: white;
-  }
+.dropdown-btn {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  border: none;
+  background: none;
+  width:100%;
+  text-align: left;
+  cursor: pointer;
+  outline: none;
+}
+.sidepanel a:hover, .dropdown-btn:hover {
+  color: white;
+}
 
-  .sidepanel .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-  }
-  
-  .dropdown-container {
-    display: none;
-    background-color: #111;
-    padding-left: 8px;
-  }
+.active {
+  background-color: #ffc400ef;
+  color: white;
+}
 
-  .fa-caret-down {
-    float: right;
-    padding-right: 8px;
-  }
-  
-  .openbtn {
-    font-size: 30px;
-    cursor: pointer;
-    background-color: transparent;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-  }
+.sidepanel .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+.dropdown-container {
+  display: none;
+  background-color: #111;
+  padding-left: 8px;
+}
+
+.fa-caret-down {
+  float: right;
+  padding-right: 8px;
+}
+
+.openbtn {
+  font-size: 30px;
+  cursor: pointer;
+  background-color: transparent;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+}
+
+#Start-html {
+  font-size: 25;
+  color: white;
+}
 
   /*Willkommen*/
   #willkommen-container{
