--- a/css/start.css
+++ b/css/start.css
@@ -113,3 +113,15 @@ body {
     color: white;
 }
 
+.box {
+  border-radius: 20px;
+  width: 400px;
+  padding: 30px;
+  background-color: rgba(0 , 0, 0, 0.4);
+  box-shadow: 2px 2px 10px #0367fd;
+  display: flex;
+  flex-direction: column;
+}
+.box {
+  color: white;
+}
